# dl_template

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
project/: __init__.py
src/: __init__.py  eval_config.py  train_config.py
src/datasets/: __init__.py  mnist_dataset.py
src/evaluators/: __init__.py  mnist_evaluator.py
src/models/: mnist_classifier.py
src/util/: __init__.py  loading.py  pluginloader.py  util.py
