[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.scripts]
train = "src:train_main"
evaluate = "src:evaluate_main"

[tool.flit.metadata]
module = "src"
author = "Thomas Colligan"
maintainer = "Thomas Colligan"
maintainer-email = "thomas.colligan@arizon.edu"
home-page = "https://github.com/colligan/dl_template"
description-file = "README.md"

[tool.isort]
profile = "black"

[tool.flit.sdist]
exclude = [
    ".gitignore",
]
